fix: diet entity now with new property photoUrl
