# backend/src/api/diet/schema/post/postDiet.ts
@@ -4,5 +4,6 @@ export const dietPostSchema: Joi.Schema = Joi.object().keys({
   name: Joi.string().required(),
   dailyCost: Joi.number()
     .min(0)
-    .required()
+    .required(),
+  photoUrl: Joi.string().required()
 });
