# backend/src/api/diet/schema/put/putDiet.ts
@@ -1,8 +1,7 @@
 import Joi from "@hapi/joi";
 
 export const dietPutSchema: Joi.Schema = Joi.object().keys({
-  name: Joi.string().required(),
-  dailyCost: Joi.number()
-    .min(0)
-    .required()
+  name: Joi.string(),
+  dailyCost: Joi.number().min(0),
+  photoUrl: Joi.string()
 });
